      (Shaxthal Rayblade, Shaxthal Stormblade, Elyssa).
    * Increased Errant Soul's ranged attack strength from 2-1 to 2-2.
    * Changed Leech's alignment from 'lawful' to 'neutral'.
    * Decreased Leech's HP from 62 to 42.
    * Decreased Leech's melee damage from 11-2 to 9-2.
    * Decreased Leech's unit level from 3 to 1.
  * Applied changes from bumbadadabum's "The Aragwaithi" add-on, versions 1.0.6
    through 1.0.9, and "Era of Chaos" version 1.3.1+dev up to commit
    9dedeba7cddc2a027745c9994a917fdcb78ed341:
    * Archer HP increased from 26 to 28.
    * Granted the new 'precision' weapon special to the Greatbow's ranged
      attack.
    * Increased Guard's blade resistance from 10% to 20%.
    * Increased Guard's XP from 64 to 74.
    * Decreased Guard's cost from 28 to 27.
    * Decreased Pikeman's cost from 38 to 28.
    * Increased Shield Guard's cost from 37 to 45.
    * Increased Shield Guard's blade and pierce resistances from 10% to 20%.
    * Granted the 'marksman' weapon special to the Swordsmaster.
    * Renamed the Aragwaith Witch's image files.
  * Fixed Chaos Arbalestier ranged attack animation failing to trigger.
  * Fixed unit types with missing faction prefixes in their names:
    * Arbalestier -> Chaos Arbalestier
    * Cataphract -> Chaos Cataphract
    * Crossbowman -> Chaos Crossbowman
    * Heavy Longbowman -> Chaos Heavy Longbowman
  * Fixed multiple "Descriptions should no longer include the name as the first
    line" warnings on 1.11.1 and later.
  * Fixed "Terrain '**' has evaluated to 100 (cost) [...]" warnings on Wesnoth
    1.11.x caused by Aragwaith units.
  * Replaced old bird NPC behavior code with the newer Lua-based implementation
    from AtS.
  * Removed help markup from the Sylvan Essence ability special notes to avoid
    issues in Pango contexts (e.g. sidebar tooltips).
  * Removed references to nonexistent image files in the defense animations for
    female Elvish Trapper and Elvish Prowler units.