@@ -68,6 +68,7 @@ Version 1.99.0-dev (codename Reconstruction RC 1):
     * Decreased Leech's HP from 62 to 42.
     * Decreased Leech's melee damage from 11-2 to 9-2.
     * Decreased Leech's unit level from 3 to 1.
+    * Disabled Elvish Sylph advancement from Elvish Enchantress.
   * Applied changes from bumbadadabum's "The Aragwaithi" add-on, versions 1.0.6
     through 1.0.9, and "Era of Chaos" version 1.3.1+dev up to commit
     9dedeba7cddc2a027745c9994a917fdcb78ed341:
